--- a/tiendaLibros/package.json
+++ b/tiendaLibros/package.json
@@ -15,11 +15,18 @@
     "@angular/common": "~7.2.0",
     "@angular/compiler": "~7.2.0",
     "@angular/core": "~7.2.0",
+    "@angular/fire": "^5.1.3",
     "@angular/forms": "~7.2.0",
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
+    "firebase": "^6.0.2",
+    "font-awesome": "^4.7.0",
+    "jquery": "^3.4.1",
+    "ngx-spinner": "^7.1.4",
+    "popper.js": "^1.15.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
